# harel-statechart-renderer

./: .gitignore  BACKLOG.md  README.md  UPSTREAM_SKILL_BUGS.md  pyproject.toml  render_statechart.py  validate_render.py
examples/: banktran.machine.json  posting.machine.json
tests/: test_render.py
